# brewkit

./: .gitignore  AUTHORS  ChangeLog  Makefile  brewkit Session.sql  docker-compose.yml  index.html  package-lock.json  package.json  readme.md  requirements.txt  setup.cfg  setup.py
api/: __init__.py
app/: __init__.py  exceptions.py  log.py  omega.py
app/tests/: test_omega.py  test_str116.py
brewkit/: __init__.py
brewkit/api/: ._configuration.py  Dockerfile  configuration.py  controllers.py  devices.py  example_configuration.py  exceptions.py  requirements.txt  server.py
brewkit/app/: log.py  omega.py  str116.py
brewkit/client/: index.html  package.json
brewkit/db/: brewkit.sqlite  package-lock.json  package.json
brewkit/interface/: __init__.py  app.py  configure.html  index.html  interface.py  login.html  server.py  storage.py  user_manager.py
brewkit/tests/: test_basic.py
client/: Dockerfile  README.md  package-lock.json  package.json
client/src/: App.vue  Slacker.js  main.js
db/: Dockerfile  brewkit.sqlite  package-lock.json  package.json
db/src/: server.js
docs/: cli.md
grain/: __init__.py
hops/: __init__.py
interface/: __init__.py
interface/tests/: test_basic.py
public/: index.html
src/: App.vue  api.js  main.js  router.js  slack.js
src/components/: AddDeviceCard.vue  AddRTUCard.vue  Card.vue  ConfigDetailsInput.vue  ConfigSelect.vue  Confirmation.vue  Device.vue  DeviceTable.vue  FancyConfigSelect.vue  ModuleSlot.vue  Navbar.vue  NewConfigInput.vue  Notification.vue  RTUGrid.vue  RTUTable.vue  Slack.vue  (+2 more)
yeast/: __init__.py
(+104 files in other folders)
