[metadata]
name = brewkit
author = Luke Sweeney
author-email = llamicron@gmail.com
summary = Brewkit tools
license = MIT
description-file =
    readme.md
home-page = http://github.com/NavasotaBrewing/brewkit
requires-python = >=3.6
[files]
packages =
    brewkit
[entry_points]
console_scripts =
    brewkit = brewkit.interface:main
